# packages/api-public/lib/schemas/errors.ts
@@ -3,10 +3,10 @@ import * as z from 'zod';
 import { apiSchemaRegistry } from './schema.js';
 
 import type { FastifyReply, RawServerDefault, RouteGenericInterface } from 'fastify';
-import type { ZodTypeProvider } from 'fastify-type-provider-zod';
+import type { ZodFastifySchemaValidationError, ZodTypeProvider } from 'fastify-type-provider-zod';
 import type { IncomingMessage, ServerResponse } from 'http';
 
-export const schemaNotFound = z.object({
+export const schemaNotFound = z.strictObject({
     error: z.strictObject({
         code: z.literal('not_found'),
         errorId: z.uuid().optional(),
@@ -14,7 +14,7 @@ export const schemaNotFound = z.object({
     })
 });
 
-export const schemaServerError = z.object({
+export const schemaServerError = z.strictObject({
     error: z.strictObject({
         code: z.literal('server_error'),
         errorId: z.uuid().optional(),
@@ -22,16 +22,33 @@ export const schemaServerError = z.object({
     })
 });
 
-export const schemaUnauthorized = z.object({
+export const schemaUnauthorized = z.strictObject({
     error: z.strictObject({
         code: z.literal('unauthorized'),
         message: z.string()
     })
 });
 
+export const schemaBadRequest = z.strictObject({
+    error: z.strictObject({
+        code: z.literal('bad_request'),
+        message: z.string(),
+        validation: z
+            .looseObject({
+                keyword: z.string(),
+                instancePath: z.string(),
+                schemaPath: z.string(),
+                message: z.string(),
+                params: z.object({}).optional()
+            })
+            .array()
+    })
+});
+
 apiSchemaRegistry.add(schemaNotFound, { id: 'ResponseNotFound' });
 apiSchemaRegistry.add(schemaServerError, { id: 'ResponseServerError' });
 apiSchemaRegistry.add(schemaUnauthorized, { id: 'ResponseUnauthorized' });
+apiSchemaRegistry.add(schemaBadRequest, { id: 'ResponseBadRequest' });
 
 type FastifyReplyError<TCode extends number, TError extends z.ZodObject<any>> = FastifyReply<
     RouteGenericInterface,
@@ -74,4 +91,19 @@ export async function resUnauthorized(res: FastifyReplyError<401, typeof schemaU
         }
     };
     return res.status(401).send(err);
+}
+
+export async function resBadRequest(
+    res: FastifyReplyError<400, typeof schemaBadRequest>,
+    message: string,
+    validation: ZodFastifySchemaValidationError[]
+): Promise<void> {
+    const err: z.infer<typeof schemaBadRequest> = {
+        error: {
+            code: 'bad_request',
+            message: message ?? 'Bad Request',
+            validation
+        }
+    };
+    return res.status(400).send(err);
 }
